--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ notify = { version = "^2.5", optional = true }
 log = "^0.3"
 walkdir = "^0.1"
 serde_macros = { version = "^0.7.0", optional = true }
+hprof = "*"
 
 
 [features]
